[TP-112] 게시글 상세 페이지 API 수정 #94