@@ -1,12 +1,11 @@
 package com.goorm.tablepick.domain.board.dto.response;
 
-import org.springframework.data.domain.Page;
 import com.goorm.tablepick.domain.board.entity.Board;
 import lombok.AllArgsConstructor;
 import lombok.Getter;
+import org.springframework.data.domain.Page;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Getter
 @AllArgsConstructor
@@ -22,7 +21,8 @@ public class PagedBoardListResponseDto {
     public PagedBoardListResponseDto(Page<Board> page) {
         this.boardList = page.getContent().stream()
                 .map(BoardListResponseDto::from)
-                .collect(Collectors.toList());
+                .filter(dto -> dto.getImageUrl() != null)  // 추가
+                .toList();
         this.pageNumber = page.getNumber();
         this.pageSize = page.getSize();
         this.totalElements = page.getTotalElements();
